<resources>
    <string name="app_name">Mobile</string>
    <string name="illustration">Illustration</string>
    <string name="get_started">Get Started</string>
    <string name="by_creating_a_free_account">by creating a free account.</string>
    <string name="full_name">Full Name</string>
    <string name="valid_email">Valid email</string>
    <string name="phone_number">Phone number</string>
    <string name="strong_password">Strong Password</string>
    <string name="by_checking_the_box_you_agree_to_our_terms_and_conditions">By checking the box you agree to our Terms and Conditions.</string>
    <string name="todo">TODO</string>
    <string name="already_a_member">Already a member?</string>
    <string name="log_in">Log In</string>
    <string name="welcome_back">Welcome back,</string>
    <string name="sign_in_to_access_your_account">Sign in to access your account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="next">Next</string>
    <string name="new_member">New Member?</string>
    <string name="register_now">Register now</string>
    <string name="button_change_fragment">Change fragment</string>
    <string name="fragment_a_text">Fragment A</string>
    <string name="fragment_b_text">Fragment B</string>

    <string name="share">Share</string>
    <string name="like">Like</string>
    <string name="food_image">Food Image</string>
    <string name="japanese_food_64">Uzbek Food (64)</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="search_here">Search here…</string>
</resources>