<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <!-- 2. Illustration -->
    <ImageView
        android:id="@+id/illustration"
        android:layout_width="321dp"
        android:layout_height="251dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/illustration"
        android:src="@drawable/illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 3. Welcome Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/welcome_text"
        style="@style/WelcomeTextStyle"
        android:text="@string/welcome_back"
        app:layout_constraintTop_toTopOf="@id/illustration"
        app:layout_constraintBottom_toBottomOf="@id/illustration"
        app:layout_constraintStart_toStartOf="@id/illustration"
        app:layout_constraintEnd_toEndOf="@id/illustration" />

    <!-- 4. Secondary Text -->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/secondary_text"
        style="@style/SecondaryTextStyle"
        android:text="@string/sign_in_to_access_your_account"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="@id/welcome_text"
        app:layout_constraintEnd_toEndOf="@id/welcome_text" />

    <!-- 5. Email Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_input_layout"
        style="@style/CommonTextInputLayout"
        android:hint="@string/enter_your_email"
        app:endIconDrawable="@drawable/ic_mail"
        app:layout_constraintTop_toBottomOf="@id/illustration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email_input"
            style="@style/CommonEditText"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 6. Password Input Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_input_layout"
        style="@style/CommonTextInputLayout"
        android:hint="@string/password"
        app:endIconDrawable="@drawable/ic_lock"
        app:layout_constraintTop_toBottomOf="@id/email_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="25dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_input"
            style="@style/CommonEditText"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- 7. Remember Me & Forgot Password -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/additional_options"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/password_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp">

        <!-- Remember Me Checkbox -->
        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/remember_me_checkbox"
            style="@style/AdditionalOptionsCheckBox"
            android:text="@string/remember_me"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Forgot Password Text -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forget_password"
            style="@style/LinkTextStyle"
            android:text="@string/forgot_password"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- 8. Next Button -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/next_button"
        style="@style/NextButtonStyle"
        android:text="@string/next"
        app:icon="@drawable/arrow"
        app:iconGravity="textEnd"
        app:iconPadding="8dp"
        android:layout_marginTop="@dimen/next_button_margin_top"
        app:layout_constraintTop_toBottomOf="@id/additional_options"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- 9. Footer (Registration Link) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/footer_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/next_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/footer_margin_top">

        <!-- Text for "New Member?" -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/new_member_text"
            style="@style/FooterTextStyle"
            android:text="@string/new_member"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@id/register_now_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <!-- Text for "Register now" -->
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/register_now_text"
            style="@style/FooterLinkStyle"
            android:text="@string/register_now"
            android:clickable="true"
            android:focusable="true"
            app:layout_constraintStart_toEndOf="@id/new_member_text"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
